# devops

./: .gitignore  README.md  claude.md  pyproject.toml
src/devops/: __main__.py  app.py
src/devops/actions/: shell_edit.py
src/devops/cache/: __init__.py  brew_cache.py  brew_list_cache.py  git_cache.py  man_cache.py
src/devops/collectors/: __init__.py  asdf.py  base.py  git.py  git_async.py  homebrew.py  homebrew_async.py  node.py  npm.py  path.py  python_envs.py  ruby.py  rust.py  shell_config.py  symlinks.py  version_mgrs.py
src/devops/screens/: __init__.py  ffmpeg.py  imagemagick.py  main.py
src/devops/widgets/: __init__.py  detail_panel.py  env_tree.py  loading_animation.py  password_modal.py  path_input.py
