[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops"
version = "0.1.0"
description = "Development Environment Topology Visualizer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "jrisberg" }
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
devops = "devops.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/devops"]
